# neurokitty

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/neurokitty/: __init__.py  config.py  loop.py  main.py  websocket.py
backend/neurokitty/cortical/: __init__.py  culture.py  decoder.py  encoder.py  mea.py  spike_buffer.py
backend/neurokitty/world/: __init__.py  berry.py  cat.py  enemy.py  physics.py  raycaster.py  tilemap.py
docs/: architecture.md
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CultureHealth.tsx  Dashboard.tsx  FiringRateChart.tsx  NeuralActivity.tsx  SpikeRaster.tsx  StatusBar.tsx  WorldCanvas.tsx
frontend/src/hooks/: useGameState.ts  useWebSocket.ts
frontend/src/lib/: camera.ts  renderer.ts  types.ts
